@@ -1,3 +1,7 @@
+1998-06-11  Markus Wuebben  <markus@kde.org> (KMail-0.6.9)
+
+	* KMail now uses KFileDialog only!
+
 1998-06-11  Mario Weilguni   <mweilguni@kde.org> (KMail-0.6.9)
 	
 	* "P" and "N" (next and previous mail) will cause the header
